Improve many visual spacings and fix cut decks
Utilize maxSize on Stacks, fix deck cut size, improve deck spacing,
and many other spacing/styling improvements.

--- a/src/game-components/gameComponents.css
+++ b/src/game-components/gameComponents.css
@@ -1,6 +1,6 @@
 :root {
-  --max-width: 1200px; /* TODO: CSS: based on card width and actual components */
-  --min-width: 600px;
+  --max-width: 1600px;
+  --min-width: 999px;
   --padding: 10px;
 }
 
@@ -12,7 +12,7 @@
   margin: 0 auto;
   padding: var(--padding);
 
-  border: dotted 1px Black; /* TEMP: border lines */
+  /* border: dotted 1px Black; TEMP: border lines */
 }
 
 /* Some game components are divided into 4 columns */
@@ -20,13 +20,14 @@
 .col {
   margin: 0 auto;
   padding: 0 var(--padding);
+  width: 250px;
 
-  border: dashed 1px DarkGrey; /* TEMP: border lines */
+  /* border: dashed 1px DarkGrey; TEMP: border lines */
 }
 
 /* Specific game components */
 
-/* TODO: CSS: may need to shrink action(s) below a certain threshhold */
+/* TODO: CSS: may need to shrink action(s) below a certain threshold */
 
 .options {
   background-color: DarkGrey;
@@ -37,7 +38,7 @@
   border-radius: 15px;
   border-style: solid;
   border-width: 5px;
-  width: 175px;
+  width: 250px;
 }
 
 .infobox {
